// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`containers/Bucket/Toolbar > Add > should render children when popover is opened 1`] = `
<div>
  <div
    class="Toolbar-root"
  >
    <button
      role="button"
    >
      Add files
    </button>
    <div
      aria-hidden="true"
      class="MuiBackdrop-root Toolbar-backdrop"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    />
    <div
      class="MuiPaper-root Toolbar-popup MuiPaper-elevation4 MuiPaper-rounded"
    >
      Hello, Popover!
    </div>
  </div>
</div>
`;

exports[`containers/Bucket/Toolbar > Add > should render with custom label 1`] = `
<div>
  <div
    class="Toolbar-root"
  >
    <button
      role="button"
    >
      Custom Add Label
    </button>
    <div
      aria-hidden="true"
      class="MuiBackdrop-root Toolbar-backdrop"
      style="opacity: 0; visibility: hidden;"
    />
  </div>
</div>
`;

exports[`containers/Bucket/Toolbar > Add > should render with default label 1`] = `
<div>
  <div
    class="Toolbar-root"
  >
    <button
      class="custom-class"
      role="button"
    >
      Add files
    </button>
    <div
      aria-hidden="true"
      class="MuiBackdrop-root Toolbar-backdrop"
      style="opacity: 0; visibility: hidden;"
    />
  </div>
</div>
`;

exports[`containers/Bucket/Toolbar > CreatePackage > should render children when popover is opened 1`] = `
<div>
  <div
    class="Toolbar-root"
  >
    <button
      class="Toolbar-root"
      role="button"
    >
      Create package
    </button>
    <div
      aria-hidden="true"
      class="MuiBackdrop-root Toolbar-backdrop"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    />
    <div
      class="MuiPaper-root Toolbar-popup MuiPaper-elevation4 MuiPaper-rounded"
    >
      Hello, Popover!
    </div>
  </div>
</div>
`;

exports[`containers/Bucket/Toolbar > CreatePackage > should render with empty selection 1`] = `
<div>
  <div
    class="Toolbar-root"
  >
    <button
      class="Toolbar-root custom-class"
      role="button"
    >
      Create package
    </button>
    <div
      aria-hidden="true"
      class="MuiBackdrop-root Toolbar-backdrop"
      style="opacity: 0; visibility: hidden;"
    />
  </div>
</div>
`;

exports[`containers/Bucket/Toolbar > Get > should render children when popover is opened 1`] = `
<div>
  <div
    class="Toolbar-root"
  >
    <button
      role="button"
    >
      Get files
    </button>
    <div
      aria-hidden="true"
      class="MuiBackdrop-root Toolbar-backdrop"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    />
    <div
      class="MuiPaper-root Toolbar-popup MuiPaper-elevation4 MuiPaper-rounded"
    >
      Hello, Popover!
    </div>
  </div>
</div>
`;

exports[`containers/Bucket/Toolbar > Get > should render with custom label 1`] = `
<div>
  <div
    class="Toolbar-root"
  >
    <button
      role="button"
    >
      Custom Get Label
    </button>
    <div
      aria-hidden="true"
      class="MuiBackdrop-root Toolbar-backdrop"
      style="opacity: 0; visibility: hidden;"
    />
  </div>
</div>
`;

exports[`containers/Bucket/Toolbar > Get > should render with default label 1`] = `
<div>
  <div
    class="Toolbar-root"
  >
    <button
      class="custom-class"
      role="button"
    >
      Get files
    </button>
    <div
      aria-hidden="true"
      class="MuiBackdrop-root Toolbar-backdrop"
      style="opacity: 0; visibility: hidden;"
    />
  </div>
</div>
`;

exports[`containers/Bucket/Toolbar > Organize > should render children when popover is opened 1`] = `
<div>
  <span
    class="MuiBadge-root"
  >
    <div
      class="Toolbar-root"
    >
      <button
        role="button"
      >
        Organize
      </button>
      <div
        aria-hidden="true"
        class="MuiBackdrop-root Toolbar-backdrop"
        style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      />
      <div
        class="MuiPaper-root Toolbar-popup MuiPaper-elevation4 MuiPaper-rounded"
      >
        Hello, Popover!
      </div>
    </div>
    <span
      class="MuiBadge-badge Toolbar-badge MuiBadge-anchorOriginTopRightRectangle MuiBadge-colorPrimary"
    >
      5
    </span>
  </span>
</div>
`;

exports[`containers/Bucket/Toolbar > Organize > should render with selection items 1`] = `
<div>
  <span
    class="MuiBadge-root"
  >
    <div
      class="Toolbar-root"
    >
      <button
        class="custom-class"
        role="button"
      >
        Organize
      </button>
      <div
        aria-hidden="true"
        class="MuiBackdrop-root Toolbar-backdrop"
        style="opacity: 0; visibility: hidden;"
      />
    </div>
    <span
      class="MuiBadge-badge Toolbar-badge MuiBadge-anchorOriginTopRightRectangle MuiBadge-colorPrimary"
    >
      5
    </span>
  </span>
</div>
`;
